# internal/api/ocp-presentation-api/api.go
@@ -3,11 +3,14 @@ package api
 
 import (
 	"context"
+	"fmt"
+	"unsafe"
 
 	"github.com/ozoncp/ocp-presentation-api/internal/model"
 	repo "github.com/ozoncp/ocp-presentation-api/internal/repo/presentation"
 	desc "github.com/ozoncp/ocp-presentation-api/pkg/ocp-presentation-api"
 
+	"github.com/opentracing/opentracing-go"
 	"github.com/rs/zerolog/log"
 
 	"google.golang.org/grpc/codes"
@@ -16,44 +19,54 @@ import (
 
 type api struct {
 	desc.UnimplementedPresentationAPIServer
-	repo repo.Repo
+	repo      repo.Repo
+	chunkSize uint
 }
 
-func NewPresentationAPI(repo repo.Repo) desc.PresentationAPIServer {
+func NewPresentationAPI(repo repo.Repo, chunkSize uint) desc.PresentationAPIServer {
+	if chunkSize == 0 {
+		panic("invalid argument")
+	}
+
 	return &api{
-		repo: repo,
+		repo:      repo,
+		chunkSize: chunkSize,
 	}
 }
 
 func (a *api) CreatePresentationV1(
 	ctx context.Context,
-	req *desc.CreatePresentationV1Request,
+	request *desc.CreatePresentationV1Request,
 ) (
 	*desc.CreatePresentationV1Response,
 	error,
 ) {
-	if err := req.Validate(); err != nil {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("CreatePresentationV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
 	log.Debug().
 		Str("API", "CreatePresentationV1").
-		Uint64("LessonID", req.LessonId).
-		Uint64("UserID", req.UserId).
-		Str("Name", req.Name).
-		Str("Description", req.Description).
+		Uint64("LessonID", request.Presentation.LessonId).
+		Uint64("UserID", request.Presentation.UserId).
+		Str("Name", request.Presentation.Name).
+		Str("Description", request.Presentation.Description).
 		Msg("Input data")
 
 	presentation := model.Presentation{
-		LessonID:    req.LessonId,
-		UserID:      req.UserId,
-		Name:        req.Name,
-		Description: req.Description,
+		LessonID:    request.Presentation.LessonId,
+		UserID:      request.Presentation.UserId,
+		Name:        request.Presentation.Name,
+		Description: request.Presentation.Description,
 	}
 
 	id, err := a.repo.CreatePresentation(ctx, presentation)
 	if err != nil {
-		log.Error().Msgf("Failed to insert the data: %v", err)
+		log.Error().Err(err).Msg("Failed to insert the data")
 		return nil, status.Error(codes.ResourceExhausted, err.Error())
 	}
 
@@ -64,29 +77,144 @@ func (a *api) CreatePresentationV1(
 	return response, nil
 }
 
-func (a *api) DescribePresentationV1(
+func (a *api) MultiCreatePresentationsV1(
 	ctx context.Context,
-	req *desc.DescribePresentationV1Request,
+	request *desc.MultiCreatePresentationsV1Request,
 ) (
-	*desc.DescribePresentationV1Response,
+	*desc.MultiCreatePresentationsV1Response,
 	error,
 ) {
-	if err := req.Validate(); err != nil {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("MultiCreatePresentationsV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
 	log.Debug().
-		Str("API", "DescribePresentationV1").
-		Uint64("PresentationID", req.PresentationId).
+		Str("API", "MultiCreatePresentationsV1").
+		Int("length", len(request.Presentations)).
 		Msg("Input data")
 
-	presentation, err := a.repo.DescribePresentation(ctx, req.PresentationId)
+	presentations := make([]model.Presentation, a.chunkSize)
+	var numberOfCreatedPresentations int64
+
+	for i, n := uint(0), uint(len(request.Presentations)); i < n; i += a.chunkSize {
+		end := i + a.chunkSize
+		if end > n {
+			end = n
+		}
+
+		number, err := func() (int64, error) {
+			innerSpan := tracer.StartSpan(
+				fmt.Sprintf("MultiCreatePresentationsV1: %d Bytes (B)", a.chunkSize*uint(unsafe.Sizeof(model.Presentation{}))),
+				opentracing.ChildOf(span.Context()),
+			)
+			defer innerSpan.Finish()
+
+			var j int
+			for ; i < end; i, j = i+1, j+1 {
+				presentations[j].LessonID = request.Presentations[i].LessonId
+				presentations[j].UserID = request.Presentations[i].UserId
+				presentations[j].Name = request.Presentations[i].Name
+				presentations[j].Description = request.Presentations[i].Description
+			}
+
+			return a.repo.MultiCreatePresentations(ctx, presentations[:j])
+		}()
+
+		if err != nil {
+			log.Error().Err(err).Msg("Failed to insert the data")
+			return nil, status.Error(codes.ResourceExhausted, err.Error())
+		}
+
+		numberOfCreatedPresentations += number
+	}
+
+	response := &desc.MultiCreatePresentationsV1Response{
+		NumberOfCreatedPresentations: numberOfCreatedPresentations,
+	}
+
+	return response, nil
+}
+
+func (a *api) UpdatePresentationV1(
+	ctx context.Context,
+	request *desc.UpdatePresentationV1Request,
+) (
+	*desc.UpdatePresentationV1Response,
+	error,
+) {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("UpdatePresentationV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	log.Debug().
+		Str("API", "UpdatePresentationV1").
+		Uint64("LessonID", request.Presentation.LessonId).
+		Uint64("UserID", request.Presentation.UserId).
+		Str("Name", request.Presentation.Name).
+		Str("Description", request.Presentation.Description).
+		Msg("Input data")
+
+	presentation := model.Presentation{
+		ID:          request.Presentation.Id,
+		LessonID:    request.Presentation.LessonId,
+		UserID:      request.Presentation.UserId,
+		Name:        request.Presentation.Name,
+		Description: request.Presentation.Description,
+	}
+
+	found, err := a.repo.UpdatePresentation(ctx, presentation)
+
 	if err != nil {
 		if err == repo.ErrPresentationNotFound {
 			return nil, status.Error(codes.NotFound, err.Error())
 		}
 
-		log.Err(err)
+		log.Error().Err(err).Msg("Failed to update the data")
+		return nil, status.Error(codes.ResourceExhausted, err.Error())
+	}
+
+	response := &desc.UpdatePresentationV1Response{
+		Found: found,
+	}
+
+	return response, nil
+}
+
+func (a *api) DescribePresentationV1(
+	ctx context.Context,
+	request *desc.DescribePresentationV1Request,
+) (
+	*desc.DescribePresentationV1Response,
+	error,
+) {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("DescribePresentationV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
+		return nil, status.Error(codes.InvalidArgument, err.Error())
+	}
+
+	log.Debug().
+		Str("API", "DescribePresentationV1").
+		Uint64("PresentationID", request.PresentationId).
+		Msg("Input data")
+
+	presentation, err := a.repo.DescribePresentation(ctx, request.PresentationId)
+	if err != nil {
+		if err == repo.ErrPresentationNotFound {
+			return nil, status.Error(codes.NotFound, err.Error())
+		}
+
+		log.Error().Err(err).Msg("Failed to describe the data")
 		return nil, status.Error(codes.ResourceExhausted, err.Error())
 	}
 
@@ -105,28 +233,32 @@ func (a *api) DescribePresentationV1(
 
 func (a *api) ListPresentationsV1(
 	ctx context.Context,
-	req *desc.ListPresentationsV1Request,
+	request *desc.ListPresentationsV1Request,
 ) (
 	*desc.ListPresentationsV1Response,
 	error,
 ) {
-	if err := req.Validate(); err != nil {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("ListPresentationsV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
 	log.Debug().
 		Str("API", "ListPresentationsV1").
-		Uint64("Limit", req.Limit).
-		Uint64("Offset", req.Offset).
+		Uint64("Limit", request.Limit).
+		Uint64("Offset", request.Offset).
 		Msg("Input data")
 
-	presentations, err := a.repo.ListPresentations(ctx, req.Limit, req.Offset)
+	presentations, err := a.repo.ListPresentations(ctx, request.Limit, request.Offset)
 	if err != nil {
 		if err == repo.ErrPresentationNotFound {
 			return nil, status.Error(codes.NotFound, err.Error())
 		}
 
-		log.Error().Msgf("Failed to fill the list: %v", err)
+		log.Error().Err(err).Msg("Failed to fill the data")
 		return nil, status.Error(codes.ResourceExhausted, err.Error())
 	}
 
@@ -152,23 +284,27 @@ func (a *api) ListPresentationsV1(
 
 func (a *api) RemovePresentationV1(
 	ctx context.Context,
-	req *desc.RemovePresentationV1Request,
+	request *desc.RemovePresentationV1Request,
 ) (
 	*desc.RemovePresentationV1Response,
 	error,
 ) {
-	if err := req.Validate(); err != nil {
+	tracer := opentracing.GlobalTracer()
+	span := tracer.StartSpan("RemovePresentationV1")
+	defer span.Finish()
+
+	if err := request.Validate(); err != nil {
 		return nil, status.Error(codes.InvalidArgument, err.Error())
 	}
 
 	log.Debug().
 		Str("API", "RemovePresentationV1").
-		Uint64("PresentationID", req.PresentationId).
+		Uint64("PresentationID", request.PresentationId).
 		Msg("Input data")
 
-	removed, err := a.repo.RemovePresentation(ctx, req.PresentationId)
+	removed, err := a.repo.RemovePresentation(ctx, request.PresentationId)
 	if err != nil {
-		log.Error().Msgf("Failed to remove the data: %v", err)
+		log.Error().Err(err).Msg("Failed to remove the data")
 		return nil, status.Error(codes.ResourceExhausted, err.Error())
 	}
 
