# swagger/ocp-presentation-api.swagger.json
@@ -13,13 +13,13 @@
   "paths": {
     "/v1/presentation": {
       "post": {
-        "summary": "Creates a new presentation",
-        "operationId": "PresentationAPI_CreatePresentationV1",
+        "summary": "Updates a presentation",
+        "operationId": "PresentationAPI_UpdatePresentationV1",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/apiCreatePresentationV1Response"
+              "$ref": "#/definitions/apiUpdatePresentationV1Response"
             }
           },
           "default": {
@@ -133,6 +133,27 @@
         "tags": [
           "PresentationAPI"
         ]
+      },
+      "post": {
+        "summary": "Creates new presentations",
+        "operationId": "PresentationAPI_MultiCreatePresentationsV1",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/apiMultiCreatePresentationsV1Response"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "PresentationAPI"
+        ]
       }
     }
   },
@@ -165,6 +186,34 @@
         }
       }
     },
+    "apiMultiCreatePresentationsV1Response": {
+      "type": "object",
+      "properties": {
+        "number_of_created_presentations": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "apiNewPresentation": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "lesson_id": {
+          "type": "string",
+          "format": "uint64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        }
+      }
+    },
     "apiPresentation": {
       "type": "object",
       "properties": {
@@ -189,6 +238,14 @@
       }
     },
     "apiRemovePresentationV1Response": {
+      "type": "object",
+      "properties": {
+        "found": {
+          "type": "boolean"
+        }
+      }
+    },
+    "apiUpdatePresentationV1Response": {
       "type": "object",
       "properties": {
         "found": {
